# forecast-and-news-lab

./: .env.example  .gitignore  README.md  STATE.md  app.py  pyproject.toml  replit.md  requirements.txt  view_logs.sh
config/: channels.yml  keywords.yml
modules/: __init__.py  forecaster.py  llm_analyzer.py  pattern_analyzer.py  schemas.py  stock_analyzer.py  storage.py  telegram_parser.py  visualizer.py
