[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "telethon>=1.41.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "yfinance>=0.2.66",
]
